--- a/style.css
+++ b/style.css
@@ -13,3 +13,6 @@ button {background-color: #3882F6;
 
 a {text-decoration: none;
    color: white;}
+
+.logo {color: #F9FAF8;
+       font-size: 24px;}   
