--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {font-family: robot, sans-serif;}
         background-color: #1F2937;}
 
 ul {display: flex;
-    list-style-type: none;}
+    list-style-type: none;
+    gap: 16px;}
 
 button {background-color: #3882F6;
         color: white;}
