--- a/style.css
+++ b/style.css
@@ -16,4 +16,9 @@ a {text-decoration: none;
    color: white;}
 
 .logo {color: #F9FAF8;
-       font-size: 24px;}   
+       font-size: 24px;} 
+
+.main {color: #f9faf8;
+       font-size:48px;
+       font-weight: extra-bold;
+       background-color: #1F2937;}
