--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@ body {font-family: robot, sans-serif;}
 
 ul {display: flex;
     list-style-type: none;
-    gap: 16px;}
+    gap: 16px;
+    font-size: 18px;
+    color:#E5E7EB}
 
 button {background-color: #3882F6;
         color: white;}
@@ -22,3 +24,6 @@ a {text-decoration: none;
        font-size:48px;
        font-weight: extra-bold;
        background-color: #1F2937;}
+
+.second {color: #E5E7EB;
+         font-size: 18px;}
