--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {font-family: robot, sans-serif;}
 
 
 .header {display: flex;
-         justify-content: space-between;
-        background-color: #1F2937;}
+         justify-content: space-between;}
 
 ul {display: flex;
     list-style-type: none;
@@ -22,8 +21,9 @@ a {text-decoration: none;
 
 .main {color: #f9faf8;
        font-size:48px;
-       font-weight: extra-bold;
-       background-color: #1F2937;}
+       font-weight: extra-bold;}
 
 .second {color: #E5E7EB;
          font-size: 18px;}
+
+.hero {background-color: #1F2937;}
