--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ a {text-decoration: none;
 
 .main {color: #f9faf8;
        font-size:48px;
-       font-weight: extra-bold;}
+       font-weight: 800;}
 
 .second {color: #E5E7EB;
          font-size: 18px;}
