--- a/style.css
+++ b/style.css
@@ -26,4 +26,4 @@ a {text-decoration: none;
 .second {color: #E5E7EB;
          font-size: 18px;}
 
-.hero {background-color: #1F2937;}
+.container {background-color: #1F2937;}
