--- a/style.css
+++ b/style.css
@@ -21,11 +21,15 @@ a {text-decoration: none;
 
 .main {color: #f9faf8;
        font-size:48px;
-       font-weight: 800;}
+       font-weight: 800;
+       padding: 0px;
+       margin: 0px;}
 
 .second {color: #E5E7EB;
-         font-size: 18px;}
+         font-size: 18px;
+         margin: 0px;
+         padding: 0px;}
 
 .container {background-color: #1F2937;}
 
-.container2 {display: flex;}
+.container2
