--- a/style.css
+++ b/style.css
@@ -49,4 +49,7 @@ a {text-decoration: none;
 
 .htext-container {display: flex;
                   flex-direction: column;
-                  align-items: flex-start;} 
+                  align-items: flex-start;}
+h1 {font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;} 
