--- a/style.css
+++ b/style.css
@@ -57,4 +57,8 @@ h1 {font-size: 36px;
     .gen-cont {display: flex;
                justify-content: space-evenly;}
     
-    .gen-image {border: 5px solid #3882F6}
+ .gen-image {display: flex;
+             height: 200px;
+             border: 5px solid #3882F6;}      
+    
+   
