Add display flex and space-evenly to gentxt-cont

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ h1 {font-size: 36px;
     
  .gen-image {display: flex;
              height: 200px;
-             border: 5px solid #3882F6;}      
+             border: 5px solid #3882F6;}  
     
-   
+ .gentxt-cont {display: flex;
+               justify-content: space-evenly;}   
