Edit qa-cont background color

--- a/style.css
+++ b/style.css
@@ -63,3 +63,5 @@ h1 {font-size: 36px;
     
  .gentxt-cont {display: flex;
                justify-content: space-evenly;}   
+
+.qa-cont{background-color: #E5E7EB;}
