Edit font weight of paragraph inside author container

--- a/style.css
+++ b/style.css
@@ -69,3 +69,5 @@ h1 {font-size: 36px;
 .quote {font-style: italic;
         font-size: 36px;
         color: #1F2937;}
+
+.author {font-weight: 900;}
