--- a/style.css
+++ b/style.css
@@ -71,7 +71,10 @@ h1 {font-size: 36px;
 
 .b-cont {background-color:#3882F6;
          width: 1000px;
-         height: 100px;}
+         height: 100px;
+         display: flex;
+         align-items: center;
+         justify-content: center;}
 
 .b2-cont {display: flex;
           justify-content: center;}
