--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ ul {display: flex;
 a {text-decoration: none;
    color: white;}
 
-.logo {color: #F9FAF8;
+.logo {color: #1F2937;
        font-size: 24px;} 
 
 .hero-main {color: #f9faf8;
@@ -32,6 +32,10 @@ a {text-decoration: none;
          font-size: 18px;
          margin: 0px;
          padding: 0px;}
+
+.bt-1{background-color: #3882F6;
+      color: white;
+      border-radius: 8px;} 
 
 .nav-bar {background-color: #1F2937;
        display: flex;
