--- a/style.css
+++ b/style.css
@@ -53,7 +53,9 @@ a {text-decoration: none;
 
 .htext-container {display: flex;
                   flex-direction: column;
-                  align-items: flex-start;}
+                  align-items: flex-start;
+                  margin-right: 48px;}
+                  
 h1 {font-size: 36px;
     font-weight: 800;
     color: #1F2937;} 
