--- a/style.css
+++ b/style.css
@@ -49,7 +49,9 @@ a {text-decoration: none;
                  flex-direction: row-reverse;
               background-color: #1F2937;
               align-items: center;
-              justify-content: center;}
+              justify-content: center;
+              padding-top: 40px;
+              padding-bottom: 100px;}
 
 .htext-container {display: flex;
                   flex-direction: column;
