--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ h1 {font-size: 36px;
 .b2-cont {display: flex;
           justify-content: center;}
 
+ .bt-2 {background-color: #3882F6;
+        color: white;
+       border: 1px solid white} 
+               
 .footer {background-color: #1F2937;
          color: white;
          display:flex;
