--- a/style.css
+++ b/style.css
@@ -88,7 +88,10 @@ h1 {font-size: 36px;
          height: 100px;
          display: flex;
          align-items: center;
-         justify-content: center;}
+         justify-content: center;
+         margin-top: 50px;
+         margin-bottom: 50px;
+         border-radius: 4px;}
 
 .b2-cont {display: flex;
           justify-content: center;}
