--- a/style.css
+++ b/style.css
@@ -107,4 +107,6 @@ h1 {font-size: 36px;
 .footer {background-color: #1F2937;
          color: white;
          display:flex;
-         justify-content: center;}
+         justify-content: center;
+         padding-top: 30px;
+         padding-bottom: 30px;}
