Edit qa-cont top and bottom padding

--- a/style.css
+++ b/style.css
@@ -75,7 +75,9 @@ h1 {font-size: 36px;
  .gentxt-cont {display: flex;
                justify-content: space-evenly;}   
 
-.qa-cont{background-color: #E5E7EB;}
+.qa-cont{background-color: #E5E7EB;
+         padding-top: 90px;
+         padding-bottom: 90px;}
 
 .quote {font-style: italic;
         font-size: 36px;
