--- a/style.css
+++ b/style.css
@@ -81,7 +81,9 @@ h1 {font-size: 36px;
 
 .quote {font-style: italic;
         font-size: 36px;
-        color: #1F2937;}
+        color: #1F2937;
+        display:flex;
+        justify-content: center;}
 
 .author {font-weight: 900;}
 
