--- a/style.css
+++ b/style.css
@@ -67,8 +67,7 @@ h1 {font-size: 36px;
     .gen-cont {display: flex;
                justify-content: space-evenly;}
     
- .gen-image {display: flex;
-             height: 200px;}  
+ .gen-image {height: 200px;}  
     
 .border{border: 5px solid #3882F6;
        border-radius: 5px;} 
