--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ h1 {font-size: 36px;
     .gen-cont {display: flex;
                justify-content: space-evenly;}
     
- .gen-image {height: 200px;}  
+ .gen-iandt {height: 200px;}  
     
-.gen-image2{border: 5px solid #3882F6;
+.gen-image{border: 5px solid #3882F6;
        border-radius: 5px;
        width: 200px;
        height: auto;} 
