--- a/style.css
+++ b/style.css
@@ -64,8 +64,9 @@ h1 {font-size: 36px;
     margin-top: 20px;
     margin-bottom: 20px;} 
 
-    .gen-cont {display: flex;
-               justify-content: space-evenly;}
+.gen-cont {display: flex;
+          justify-content: space-evenly;
+          padding-bottom: 50px;}
     
  .gen-iandt {}  
     
