--- a/style.css
+++ b/style.css
@@ -44,7 +44,10 @@ a {text-decoration: none;
 
 .nav-bar {background-color: #1F2937;
        display: flex;
-       justify-content: space-around;}
+       justify-content: space-around;
+       position: sticky;
+       top: 0;
+       z-index: 999;}
 
 
 .hero-container {display: flex;
