--- a/style.css
+++ b/style.css
@@ -108,7 +108,9 @@ h1 {font-size: 36px;
          border-radius: 4px;}
 
 .b2-cont {display: flex;
-          justify-content: center;}
+          justify-content: center;
+         margin-top: 50px;
+         margin-bottom: 50px;}
 
  .bt-2 {background-color: #3882F6;
         color: white;
