--- a/style.css
+++ b/style.css
@@ -73,12 +73,13 @@ h1 {font-size: 36px;
           justify-content: space-evenly;
           padding-bottom: 50px;}
     
- .gen-iandt {}  
+   
     
 .gen-image{border: 5px solid #3882F6;
        border-radius: 15px;
        width: 200px;
-       height: 200px;} 
+       height: 200px;
+      object-fit: cover;} 
 
 .gentxt-cont {display: flex;
                justify-content: space-evenly;}   
